XWIKI-23700: Creating a page from a template doesn't copy required rights * use Java 17 compatible code since it's cherry-picked on 17.10.x
(cherry picked from commit 6e67d3f1e5f958228b08ef56f9391b314a10a0bb)